<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="SHARED_PREFERENCES">com.uwt.strugglebus.geotracker.shared_preferences</string>

    <string name="app_name" translatable="false">GeoTracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_my_account">Account</string>
    <string name="title_activity_my_map">Map</string>
    <string name="title_activity_registration">Registration</string>

    <string name="map_text">Click to see the points on a map</string>

    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="forgot">Forgot Password?</string>
    <string name="logout">Logout</string>
    <string name="old_password">Old Password</string>

    <string name="change_sample" translatable="false">Change Sampling Rate</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="security_q">Security Questions</string>
    <string name="security_a">Security Answer</string>
    <string name="cancel">Cancel</string>
    <string-array name="security_questions">
        <item>What is the name of your first pet?</item>
        <item>What is your mother\'s maiden name?</item>
        <item>What is your favorite color?</item>
        <item>What is your favorite programing language?</item>
    </string-array>
    <string name="accept">Accept</string>
    <string name="invalid">Invalid Input</string>
    <string name="invalid_email_format">Invalid Email Format</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_password_format">Invalid Password, must be at least 5 characters long</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="invalid_old_password">Invalid Old Password</string>

    <string name="invalid_security_a">Invalid or empty security answer</string>

    <string name="eula_accept" translatable="false">Eula Accept</string>
    <string name="eula">
LICENSE:
\n\n\"THE SOFTWARE\" shall be taken to mean the software contained in this app and any subsequent versions
or upgrades received as a result of having purchased this app. \"BUYER\" shall be taken as the original
purchaser of the software.

\n\nBuyer has the non-exclusive right to the use of software only on a single device. Buyer may not electronically
transfer the program from one device to another over any type of network. Buyer may not distribute copies
of the software or the accompanying documentation to others either for a fee or without charge. Buyer may not modify
or translate the program or documentation. User may not disassemble the program or allow it to be disassembled
into its constituent source code. Buyer\'s use of the software indicates his/her acceptance of these terms
and conditions. If buyer does not agree to these conditions, return the distribution media, documentation, and
associated materials to the vendor from whom the software was purchased, and/or uninstall the software from the device,
and erase the software from any and all storage devices upon which it may have been installed.

\n\nThis license agreement shall be governed by the laws of The United States of America, Massachusetts and
shall inure to the benefit of GeoTracker or its assigns.

\n\nDISCLAIMER / LIMITATION OF LIABILITY:
\n\nBuyer acknowledges that the software may not be free from defects and may not satisfy all of buyer\'s
needs. GeoTracker warrants all media on which the software is distributed for 60 days to be free from defects
in normal use. The software and any accompanying written materials are licensed \"AS IS\". Buyer\'s exclusive
remedy during the warranty period (if any) shall consist of replacement of distribution media if determined to be
faulty. In no event will GeoTracker be liable for direct, indirect, incidental or consequential damage or
damages resulting from loss of use, or loss of anticipated profits resulting from any defect in the software,
even if it has been advised of the possibility of such damage. Some laws do not allow exclusion or limitation
of implied warranties or liabilities for incidental or consequential damages, so the above limitations or
exclusion may not apply.

\n\nCONSENT OF USE OF DATA:
\n\nYou agree that StruggleBus may collect and use information gathered in any manner as part of the product support services provided to you, if any, related to GeoTracker 1.0.
StruggleBus may also use this information to provide notices to you which may be of use or interest to you.

\n\nSPECIFIC RESTRICTIONS:
\n\nIn accordance with the COMPUTER SOFTWARE RENTAL ACT OF 1990, this software may not be rented, lent or leased.
\n\nThe software and accompanying documentation may not be provided by a \"Backup Service\" or any other vendor
which does not provide an original package as composed of GeoTracker, including but not limited to all original
distribution media, documentation, registration cards, and insertions.</string>
    <string name="updates">UPDATES: \n\n</string>
    <string name="title_activity_recover_password">recover_password</string>
    <string name="title_activity_reset_password">Reset Password</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_location" translatable="false">LocationActivity</string>

    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="view_trajectory">View Trajectories</string>
    <string name="view_map">View Map</string>
    <string name="set_zones">Set Recording Zones</string>
    <string name="change_pass">Change Password</string>
    <string name="change_sec_a">Change Security Question or Answer</string>
    <string name="commit_to_web" translatable="false">Commit To Web Service</string>
    <string name="title_activity_trajectory_chooser" translatable="false">TrajectoryChooser</string>
    <string name="title_activity_change_password" translatable="false">ChangePassword</string>

    <string name="register_url" translatable="false">450.atwebpages.com/adduser.php</string>
    <string name="forgot_password_url" translatable="false">450.atwebpages.com/reset.php</string>
    <string name="eula_url" translatable="false">450.atwebpages.com/agreement.php</string>
    <string name="log_point_url" translatable="false">450.atwebpages.com/addLog.php</string>
    <string name="view_points_url" translatable="false">450.atwebpages.com/view.php</string>
    <string name="invalid_confirm">Invalid Confirm Password, does not match password</string>
    <string name="password">Password</string>
    <string name="title_activity_trajectories" translatable="false">Trajectories</string>

    <string name="lat" translatable="false">Latitude</string>
    <string name="lon" translatable="false">Longitude</string>
    <string name="speed" translatable="false">Speed</string>
    <string name="heading" translatable="false">Heading</string>
    <string name="time" translatable="false">Time</string>
    <string name="title_activity_change_sample" translatable="false">Change Sampling Rate</string>

    <string name="accept_save" translatable="false">Accept and Save Changes</string>
    <string name="back" translatable="false">back</string>
    <string name="geo_sample_rate" translatable="false">Record location every </string>
    <string name="server_push" translatable="false">Update to Server Every </string>
    <string name="push_manual" translatable="false">Update to server manually only</string>
    <string name="push_power" translatable="false">Only update to server when connected to power</string>
    <string name="start_tracker" translatable="false">Start Tracker</string>
    <string name="stop_tracker" translatable="false">Stop Tracker</string>

</resources>