<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.uwt.strugglebus.geotracker.Controller.Trajectories">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/traject_table"
        android:padding="5dip">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dip">
            <TextView
                android:text="@string/lat"
                android:padding="5dip"
                android:background="#FFF"/>
            <TextView
                android:text="@string/lon"
                android:padding="5dip"
                android:background="#FFF"/>
            <TextView
                android:text="@string/speed"
                android:padding="5dip"
                android:background="#FFF"/>
            <TextView
                android:text="@string/heading"
                android:padding="5dip"
                android:background="#FFF"/>
            <TextView
                android:text="@string/time"
                android:padding="5dip"
                android:background="#FFF"/>
        </TableRow>

    </TableLayout>

</ScrollView>
