<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.uwt.strugglebus.geotracker.Registration">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:id="@+id/reg_email"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"/>
        <EditText
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:id="@+id/reg_password"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"/>
        <EditText
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:id="@+id/reg_confirm_password"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/security_q"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/question_spinner"
            android:layout_gravity="center_horizontal"></Spinner>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/security_a"
            android:inputType="textMultiLine"
            android:id="@+id/security_answer"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/reg_accept"
                android:text="@string/accept"
                android:layout_gravity="center_horizontal"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/reg_cancel"
                android:text="@string/cancel"
                android:layout_gravity="center_horizontal"/>
            </LinearLayout>
    </LinearLayout>
</ScrollView>
