<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.uwt.strugglebus.geotracker.View.TrajectoryChooser">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView android:text="@string/email" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/account_email"/>
        <TextView android:text="@string/view_trajectory"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="2">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_date"
                android:onClick="showDatePickerDialog"
                android:id="@+id/start_date_button"
                android:layout_row="0"
                android:layout_column="0"/>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:text="date"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_time"
                android:onClick="showTimePickerDialog"
                android:id="@+id/start_time_button"
                android:layout_column="0"
                android:layout_row="1"/>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:text="time"/>

        </GridLayout>


        <ToggleButton
            android:id="@+id/end_date_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:showText="true"
            android:textOff="Current Time"
            android:textOn="Custom"
            android:text="Select End Time"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="2">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_time"
                android:onClick="showDatePickerDialog"
                android:id="@+id/end_date_button"
                android:enabled="false"
                android:layout_row="0"
                android:layout_column="0"/>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:text="date"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_time"
                android:onClick="showTimePickerDialog"
                android:id="@+id/end_time_button"
                android:enabled="false"
                android:layout_row="1"
                android:layout_column="0"/>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:text="time"/>
        </GridLayout>

    </LinearLayout>
</ScrollView>